fixed x-axis overflow

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 }
 
 #app {
-  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   min-width: 375px;
   margin: 0;
